# Adaptive-Neuro-Symbolic-Concept-Learning-under-Noisy-Perception

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RESULTS.md  RESULTS_SUMMARY.md  SLO.md  Thinkingmachiene.py  adaptive_thresholds.py  belief_state.py  error_feedback_engine.py  feature_feedback_engine.py  pyproject.toml  test_prediction.py
.github/workflows/: ci.yml  release.yml
active_learning/: __init__.py  corrections.py
adaptive_neuro_symbolic_concept_learning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  THEORY.md  UPDATE_DYNAMICS.md
evaluation/: benchmarks.json  experiment_manager.py  reporting.py  run_benchmarks.py
evaluation/configs/: default_with_ablations.json  full_only_quick.json
evaluation/results/: ablation_deltas.csv  per_run_metrics.csv  per_step_metrics.csv  summary_metrics.csv
inference/: __init__.py  update_cycle.py
interaction/: cli_helpers.py
observability/: __init__.py  runtime.py
perception/: __init__.py  backend.py  config.py  feature_processing.py  pipeline.py  security.py
tests/: test_backend_integration.py  test_cli_helpers.py  test_experiment_manager.py  test_interactive_failures.py  test_reporting.py  test_runtime_observability.py
